# thought

./: .gitignore  Cargo.toml  flake.nix
src/: app.rs  config.rs  main.rs  styles.css
templates/: index.stpl
