[package]
name = "thought"
version = "0.1.0"
edition = "2024"

[dependencies]
sailfish = "0.9"
toml = "0.9"
dirs = "6.0"
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "glow",
    "wayland",
    "default_fonts",
] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
pulldown-cmark = { version = "0.13", default-features = false, features = [
    "html",
] }
serde = { version = "1.0", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }
scraper = "0.22"

[profile.release]
lto = true
strip = true
