[package]
name = "thought"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0"
egui = "0.32"
anyhow = "1.0"
sailfish = "0.9"
serde = { version = "1.0", features = ["derive"] }
scraper = { version = "0.22", default-features = false }
toml = { version = "0.9", default-features = false, features = [
    "display",
    "parse",
    "serde",
] }
eframe = { version = "0.32", default-features = false, features = [
    "glow",
    "wayland",
    "default_fonts",
] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
pulldown-cmark = { version = "0.13", default-features = false, features = [
    "html",
] }

[profile.release]
lto = true
strip = true
